--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curiosidades de Tecnologia</title>
+    <title>Android Tecnologia</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
