--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>        
     </main>
         <footer>
-            <p>Projeto site criado por <a href="https://github.com/Adriana39" target="_blank">Adriana Fernandes</a> para exercico de conhecimento em HTML e CSS do <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
+            <p>Projeto criado por Adriana Fernandes <a href="https://github.com/Adriana39/android_tecnologia" target="_blank">Repositorio</a> para exercico de conhecimento em HTML e CSS do <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>.</p>
         </footer>
 </body>
 
